# lib/db/src/schema/index.ts
@@ -3,3 +3,4 @@ export * from "./suppliers";
 export * from "./campaigns";
 export * from "./conversations";
 export * from "./messages";
+export * from "./shop-settings";
